packages/breadcrumb/src/scss/_component.scss
@use "@uqds/core/src/scss/global" as core;
@use "@uqds/icon/src/scss/global" as icon;
@import "global";

// Breadcrumb
.uq-breadcrumb {

  padding: 1rem;

  @media #{core.$screen-lg-up} {
    margin-left: auto;
    margin-right: auto;
    max-width: 73.25rem;
  }

  // Breadcrumb item
  &__list {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    flex-wrap: wrap;
  }


  // Breadcrumb item
  &__item {
    background-image: url(icon.get-icon(
      "standard--chevron-left-sml",
      core.$uq-neutral-dark80
    ));
    background-position: left 0.2rem center;
    padding: 0 0 0 1.5rem;
    margin: 0;
    font-size: core.$font-size-s;
    color: core.$uq-neutral-dark40;
    background-repeat: no-repeat;
    background-size: 1rem;
    display: none;

    &:nth-last-child(2) {
      display: flex;

      @media #{core.$screen-md-down} {
        .uq-breadcrumb__link {
          max-width: none;
        }
      }
    }
    

    @media #{core.$screen-md-up} {
      display: flex;   
      background-image: url(icon.get-icon(
        "standard--chevron-right-sml",
        core.$uq-neutral-dark80
      ));

      &:first-of-type {
        background: none;
        padding-left: 0;
      }

      &:last-of-type {
        .uq-breadcrumb__link {
          max-width: none;
        }
      }
      
    }

    &--hidden {
     display: none;
    }
  }

  &__expand {
    cursor: pointer;
  }

  // Breadcrumb link
  &__link {
    text-decoration: underline;
    color: core.$uq-neutral-dark40;
    max-width: 9rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    &:hover {

    }
  }
  
}

